versions/v3.6.0/doxygen/html/imx8qm-pinctrl_8h.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/imx8qm-pinctrl_8h.html
original_path: doxygen/html/imx8qm-pinctrl_8h.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

imx8qm-pinctrl.h File Reference

[Go to the source code of this file.](imx8qm-pinctrl_8h_source.md)

| Macros | |
| --- | --- |
| #define | [SC\_P\_UART0\_RTS\_B](#a9e6adbd17d8af3d80e25e214f920b099)   23 |
| #define | [SC\_P\_UART0\_CTS\_B](#abc16d007f79b8dac3f53ef88452622a4)   24 |
| #define | [IMX8QM\_DMA\_LPUART2\_RX\_UART0\_RTS\_B](#ade79c71c9c8fef95730c568d93f39b7a)   2 /\* UART0\_RTS\_B ---> DMA\_LPUART2\_RX \*/ |
| #define | [IMX8QM\_DMA\_LPUART2\_TX\_UART0\_CTS\_B](#a8f0955628d1e5e10c30b5ed202fe0367)   2 /\* DMA\_LPUART2\_TX ---> UART0\_CTS\_B \*/ |

## Macro Definition Documentation

## [◆ ](#ade79c71c9c8fef95730c568d93f39b7a)IMX8QM\_DMA\_LPUART2\_RX\_UART0\_RTS\_B

| #define IMX8QM\_DMA\_LPUART2\_RX\_UART0\_RTS\_B   2 /\* UART0\_RTS\_B ---> DMA\_LPUART2\_RX \*/ |
| --- |

## [◆ ](#a8f0955628d1e5e10c30b5ed202fe0367)IMX8QM\_DMA\_LPUART2\_TX\_UART0\_CTS\_B

| #define IMX8QM\_DMA\_LPUART2\_TX\_UART0\_CTS\_B   2 /\* DMA\_LPUART2\_TX ---> UART0\_CTS\_B \*/ |
| --- |

## [◆ ](#abc16d007f79b8dac3f53ef88452622a4)SC\_P\_UART0\_CTS\_B

| #define SC\_P\_UART0\_CTS\_B   24 |
| --- |

## [◆ ](#a9e6adbd17d8af3d80e25e214f920b099)SC\_P\_UART0\_RTS\_B

| #define SC\_P\_UART0\_RTS\_B   23 |
| --- |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [dt-bindings](dir_2e4d86f9d28357ce2f99093c0845149c.md)
- [pinctrl](dir_2c6c4fbd167577104b7f1b7148586168.md)
- [imx8qm-pinctrl.h](imx8qm-pinctrl_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
