versions/v3.7.0/doxygen/html/imx8qm-pinctrl_8h.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/imx8qm-pinctrl_8h.html
original_path: doxygen/html/imx8qm-pinctrl_8h.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

imx8qm-pinctrl.h File Reference

[Go to the source code of this file.](imx8qm-pinctrl_8h_source.md)

| Macros | |
| --- | --- |
| #define | [SC\_P\_UART0\_RTS\_B](#a9e6adbd17d8af3d80e25e214f920b099)   23 |
| #define | [SC\_P\_UART0\_CTS\_B](#abc16d007f79b8dac3f53ef88452622a4)   24 |
| #define | [SC\_P\_SAI1\_RXD](#aed4925b750ea0891fb3ba4a0fd8f764a)   128 |
| #define | [SC\_P\_SAI1\_TXC](#a0025af9b5e4dd7337bc1b9169dc71187)   130 |
| #define | [SC\_P\_SAI1\_TXD](#a0605b159e3c9e47701a635f1e3257d45)   131 |
| #define | [SC\_P\_SAI1\_TXFS](#aecab8f8eab601ffa895159e7d2960c15)   132 |
| #define | [IMX8QM\_DMA\_LPUART2\_RX\_UART0\_RTS\_B](#ade79c71c9c8fef95730c568d93f39b7a)   2 /\* UART0\_RTS\_B ---> DMA\_LPUART2\_RX \*/ |
| #define | [IMX8QM\_DMA\_LPUART2\_TX\_UART0\_CTS\_B](#a8f0955628d1e5e10c30b5ed202fe0367)   2 /\* DMA\_LPUART2\_TX ---> UART0\_CTS\_B \*/ |
| #define | [IMX8QM\_AUD\_SAI1\_RXD\_SAI1\_RXD](#abd4fdce8af139357ea1369cd9f0fd206)   0 /\* AUD\_SAI1\_RXD <--- SAI1\_RXD \*/ |
| #define | [IMX8QM\_AUD\_SAI1\_TXC\_SAI1\_TXC](#a4f6cf25efafff77eb236fc78e360a411)   0 /\* AUD\_SAI1\_TXC <---> SAI1\_TXC \*/ |
| #define | [IMX8QM\_AUD\_SAI1\_TXD\_SAI1\_TXD](#ac88247cbec30b3f0eea8cade6d3db323)   0 /\* AUD\_SAI1\_TXD ---> SAI1\_TXD \*/ |
| #define | [IMX8QM\_AUD\_SAI1\_TXFS\_SAI1\_TXFS](#a808edbb666867aecf498972f2244a12b)   0 /\* AUD\_SAI1\_TXFS <---> SAI1\_TXFS \*/ |

## Macro Definition Documentation

## [◆ ](#abd4fdce8af139357ea1369cd9f0fd206)IMX8QM\_AUD\_SAI1\_RXD\_SAI1\_RXD

| #define IMX8QM\_AUD\_SAI1\_RXD\_SAI1\_RXD   0 /\* AUD\_SAI1\_RXD <--- SAI1\_RXD \*/ |
| --- |

## [◆ ](#a4f6cf25efafff77eb236fc78e360a411)IMX8QM\_AUD\_SAI1\_TXC\_SAI1\_TXC

| #define IMX8QM\_AUD\_SAI1\_TXC\_SAI1\_TXC   0 /\* AUD\_SAI1\_TXC <---> SAI1\_TXC \*/ |
| --- |

## [◆ ](#ac88247cbec30b3f0eea8cade6d3db323)IMX8QM\_AUD\_SAI1\_TXD\_SAI1\_TXD

| #define IMX8QM\_AUD\_SAI1\_TXD\_SAI1\_TXD   0 /\* AUD\_SAI1\_TXD ---> SAI1\_TXD \*/ |
| --- |

## [◆ ](#a808edbb666867aecf498972f2244a12b)IMX8QM\_AUD\_SAI1\_TXFS\_SAI1\_TXFS

| #define IMX8QM\_AUD\_SAI1\_TXFS\_SAI1\_TXFS   0 /\* AUD\_SAI1\_TXFS <---> SAI1\_TXFS \*/ |
| --- |

## [◆ ](#ade79c71c9c8fef95730c568d93f39b7a)IMX8QM\_DMA\_LPUART2\_RX\_UART0\_RTS\_B

| #define IMX8QM\_DMA\_LPUART2\_RX\_UART0\_RTS\_B   2 /\* UART0\_RTS\_B ---> DMA\_LPUART2\_RX \*/ |
| --- |

## [◆ ](#a8f0955628d1e5e10c30b5ed202fe0367)IMX8QM\_DMA\_LPUART2\_TX\_UART0\_CTS\_B

| #define IMX8QM\_DMA\_LPUART2\_TX\_UART0\_CTS\_B   2 /\* DMA\_LPUART2\_TX ---> UART0\_CTS\_B \*/ |
| --- |

## [◆ ](#aed4925b750ea0891fb3ba4a0fd8f764a)SC\_P\_SAI1\_RXD

| #define SC\_P\_SAI1\_RXD   128 |
| --- |

## [◆ ](#a0025af9b5e4dd7337bc1b9169dc71187)SC\_P\_SAI1\_TXC

| #define SC\_P\_SAI1\_TXC   130 |
| --- |

## [◆ ](#a0605b159e3c9e47701a635f1e3257d45)SC\_P\_SAI1\_TXD

| #define SC\_P\_SAI1\_TXD   131 |
| --- |

## [◆ ](#aecab8f8eab601ffa895159e7d2960c15)SC\_P\_SAI1\_TXFS

| #define SC\_P\_SAI1\_TXFS   132 |
| --- |

## [◆ ](#abc16d007f79b8dac3f53ef88452622a4)SC\_P\_UART0\_CTS\_B

| #define SC\_P\_UART0\_CTS\_B   24 |
| --- |

## [◆ ](#a9e6adbd17d8af3d80e25e214f920b099)SC\_P\_UART0\_RTS\_B

| #define SC\_P\_UART0\_RTS\_B   23 |
| --- |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [dt-bindings](dir_2e4d86f9d28357ce2f99093c0845149c.md)
- [pinctrl](dir_2c6c4fbd167577104b7f1b7148586168.md)
- [imx8qm-pinctrl.h](imx8qm-pinctrl_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
